# auto_python

./: .env.example  CLAUDE.md  README.md  main.py  pyproject.toml
lib/: logger.py
scripts/automation/spotify/: __init__.py  dedupe_playlists.py  merge_playlists.py
tests/: test_main.py
