[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "lib"]

[project]
name = "auto-python"
version = "0.1.0"
description = "A collection of Python utility scripts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "pytest>=9.0.3",
    "rich>=15.0.0",
    "spotipy>=2.26.0",
]
